--- a/circle.yml
+++ b/circle.yml
@@ -1,13 +1,30 @@
 # This is the configuration file for circleci.com (CI which builds the site)
 
-# Manually install to avoid install conflicts
-# cf. https://github.com/jaspervdj/hakyll/issues/340#issuecomment-96101869
+machine:
+  # Bug with GCC caused reliable builds to break: http://stackoverflow.com/a/34811594
+  pre:
+    - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.6 20
+    - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.6 20
+    - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 10
+    - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 10
+    
+# cf. https://gist.github.com/dbp/bef96402ea07001dfed2
 dependencies:
+  cache_directories:
+    - "~/.stack"
+    - "~/.cabal"
+    - "~/.ghc"
+  pre:
+    - wget https://github.com/commercialhaskell/stack/releases/download/v0.1.3.1/stack-0.1.3.1-x86_64-linux.gz -O /tmp/stack.gz
+    - gunzip /tmp/stack.gz && chmod +x /tmp/stack
+    - sudo mv /tmp/stack /usr/bin/stack
   override:
-    - cabal install --dependencies-only --avoid-reinstalls
+    - stack setup +RTS -M1024m -K1024m 
+    - stack build --only-dependencies -j1
 
 # Compile pages during the test stage
 test:
   post:
+    - "stack install"
     - "make"
     - "make deploy"
